--- a/songStyle.css
+++ b/songStyle.css
@@ -4,9 +4,20 @@
 }
 
 body, html {
-    background-image: linear-gradient(40deg, gold, orangered);
     text-align: center;
     padding: 30px;
+}
+body {
+    background: rgba(0, 0, 0, 0);
+}
+
+html {
+    background-image: linear-gradient(40deg, gold, orangered);
+    min-height: 100vh;
+}
+
+.modal-body {
+    padding: 0;
 }
 
 li.card {
