--- a/songStyle.css
+++ b/songStyle.css
@@ -4,10 +4,11 @@
 }
 
 body, html {
+    font-size: 1.75vh;
     text-align: center;
-    padding: 30px;
 }
 body {
+    padding: 30px;
     background: rgba(0, 0, 0, 0);
 }
 
@@ -16,8 +17,8 @@ html {
     min-height: 100vh;
 }
 
-.modal-body {
-    padding: 0;
+.modal-body, .modal-footer {
+    padding: 0px;
 }
 
 li.card {
@@ -30,10 +31,11 @@ ul {
 
 .search-bar {
     position: relative;
-    margin: 20px auto;
-    width: 95%;
-    max-width: 344px;
-    height: 48px;
+    margin: auto;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    width: 60vw;
+    height: 5vh;
     background: #fff;
     border-radius: 2px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
@@ -41,26 +43,20 @@ ul {
 }
 
 input {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 250px;
-    height: 40px;
-    margin: 4px 0;
+    width: 90%;
+    height: 90%;
     border: 0;
     border-radius: 0;
     outline: 0;
     box-sizing: border-box;
-    font-size: 16px;
     font-weight: 400;
 }
 
 .card {
     margin: 5px;
-    width: 300px;
     border: 0;
-    min-width: 200px;
-    max-width: 350px;
+    min-width: 25vh;
+    max-width: 10vh;
     padding-left: 0;
     padding-right: 0;
 }
@@ -70,26 +66,37 @@ input {
     right: 10px;
     top:10px;
     text-align: center;
-    padding:5px 10px;
-    font-size:20px;
+    padding:.2vh 2vh;
+    font-size:2vh;
+    font-weight: bolder;
 }
 
 .dEasy{
-    background-image: linear-gradient(40deg, cyan, #00ff0f);
-    color: #373737;
+    background-image: linear-gradient(40deg, cyan, #00cd61);
+    color: white;
 }
 
 .dMedium{
-    background-image: linear-gradient(40deg, gold, orangered);
+    background-image: linear-gradient(40deg,yellow, #ff4500);
     color: white;
 }
 
 .dHard{
-    background-image: linear-gradient(40deg, #ff00b0, #ff0000);
+    background-image: linear-gradient(40deg,magenta, #ff0000);
     color: white;
 }
 
 .dExtreme{
-    background-image: linear-gradient(40deg, #8e34ff, #0400ff);
+    background-image: linear-gradient(40deg,darkorchid,blue);
     color: white;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+body {
+    -ms-overflow-style: none;
 }
