--- a/styling/songStyle.css
+++ b/styling/songStyle.css
@@ -4,7 +4,7 @@
 }
 
 body, html {
-    font-size: 1.75vh;
+    font-size: 2vmin;
     text-align: center;
 }
 body {
@@ -19,6 +19,10 @@ html {
 
 .modal-body, .modal-footer {
     padding: 0;
+}
+
+.btn-confirm {
+    border-radius: 0 0 .25rem .25rem;
 }
 
 li.card {
@@ -55,8 +59,8 @@ input {
 .card {
     margin: 5px;
     border: 0;
-    min-width: 25vh;
-    max-width: 10vh;
+    width: 20rem;
+
     padding-left: 0;
     padding-right: 0;
 }
