--- a/styling/songStyle.css
+++ b/styling/songStyle.css
@@ -21,8 +21,12 @@ html {
     padding: 0;
 }
 
+.btn-confirm,#selectCardImg {
+    border-radius: 0;
+}
+
 .btn-confirm {
-    border-radius: 0 0 .25rem .25rem;
+    height: 5rem;
 }
 
 li.card {
