--- a/styling/songStyle.css
+++ b/styling/songStyle.css
@@ -17,8 +17,21 @@ html {
     min-height: 100vh;
 }
 
+.modal-dialog{
+    min-width: 30rem;
+}
+
+.card-img-top{
+    max-width: 20rem;
+}
+
+.modal-header{
+    border: 0;
+}
+
 .modal-body, .modal-footer {
     padding: 0;
+    border: 0;
 }
 
 .btn-confirm,#selectCardImg {
@@ -64,7 +77,6 @@ input {
     margin: 5px;
     border: 0;
     width: 20rem;
-
     padding-left: 0;
     padding-right: 0;
 }
@@ -109,9 +121,9 @@ body {
     -ms-overflow-style: none;
 }
 
-iframe {
-    width: 100%;
-    height: 90vh;
-    border: 0;
-
+.form-group, .form-control {
+    align-content: center;
+    padding: 5px;
+    margin: 5px;
+    width: 90%;
 }
