--- a/styling/songStyle.css
+++ b/styling/songStyle.css
@@ -13,7 +13,7 @@ body {
 }
 
 html {
-    background-image: linear-gradient(40deg, gold, orangered);
+    background-image: linear-gradient(40deg, #ff5c4f, #b393ff);
     min-height: 100vh;
 }
 
