--- a/styling/songStyle.css
+++ b/styling/songStyle.css
@@ -14,7 +14,8 @@ body {
 
 html {
     background-image: linear-gradient(40deg, #ff5c4f, #b393ff);
-    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .modal-dialog{
