--- a/styling/songStyle.css
+++ b/styling/songStyle.css
@@ -9,7 +9,11 @@ body, html {
 }
 body {
     padding: 30px;
-    background: rgba(0, 0, 0, 0);
+    min-height: 100vh;
+    background-image: linear-gradient(40deg, #ff008b, #7200cc);
+    -webkit-background-image: linear-gradient(40deg, #ff008b, #7200cc);
+    -moz-background-image: linear-gradient(40deg, #ff008b, #7200cc);
+    background-attachment: fixed;
 }
 
 html {
@@ -62,7 +66,7 @@ ul {
     margin: 5vh auto;
     width: auto;
     height: auto;
-    background: #fff;
+    background: rgba(0,0,0,0);
     border-radius: 2px;
     overflow: hidden;
 }
@@ -75,6 +79,11 @@ input {
     outline: 0;
     box-sizing: border-box;
     font-weight: 400;
+}
+
+#searchInput {
+    background: rgba(0,0,0,0);
+    color: #fff;
 }
 
 .notify-badge{
@@ -127,3 +136,4 @@ body {
 h5 {
     line-height: 1.5;
 }
+
