--- a/styling/songStyle.css
+++ b/styling/songStyle.css
@@ -10,9 +10,9 @@ body, html {
 body {
     padding: 30px;
     min-height: 100vh;
-    background-image: linear-gradient(40deg, #ff008b, #7200cc);
-    -webkit-background-image: linear-gradient(40deg, #ff008b, #7200cc);
-    -moz-background-image: linear-gradient(40deg, #ff008b, #7200cc);
+    background-image: linear-gradient(#6eff73, #103a42);
+    -webkit-background-image: linear-gradient(#6eff73, #103a42);
+    -moz-background-image: linear-gradient(#6eff73, #103a42);
     background-attachment: fixed;
 }
 
