--- a/styling/songStyle.css
+++ b/styling/songStyle.css
@@ -11,8 +11,7 @@ body {
     padding: 30px;
     min-height: 100vh;
     background-image: linear-gradient(#6eff73, #103a42);
-    -webkit-background-image: linear-gradient(#6eff73, #103a42);
-    -moz-background-image: linear-gradient(#6eff73, #103a42);
+    -webkit-background-image: -webkit-linear-gradient(#6eff73, #103a42);
     background-attachment: fixed;
 }
 
@@ -67,7 +66,6 @@ ul {
     width: auto;
     height: auto;
     background: rgba(0,0,0,0);
-    border-radius: 2px;
     overflow: hidden;
 }
 
