--- a/styling/songStyle.css
+++ b/styling/songStyle.css
@@ -15,7 +15,15 @@ body {
 
 html {
     background: white;
-    padding: 30px;
+    padding: 1rem;
+}
+
+ul {
+    justify-content: center;
+}
+
+h5 {
+    line-height: 1.5;
 }
 
 .modal-dialog{
@@ -47,14 +55,14 @@ html {
     padding-right: 0;
 }
 
-.card-text, .card-title{
+.card-title{
+    white-space: pre-wrap;
+}
+
+.card-text {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-}
-
-ul {
-    justify-content: center;
 }
 
 .search-bar {
@@ -69,6 +77,7 @@ ul {
     height: auto;
     background: rgba(55,55,55,.5);
     overflow: hidden;
+    flex-wrap: nowrap;
 }
 
 input {
@@ -86,6 +95,11 @@ input {
     position: relative;
     color: white;
     pointer-events: none;
+}
+
+.navbar-item {
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 #searchInput, #searchButton{
@@ -147,8 +161,4 @@ body {
     padding: 5px;
     margin: 5px;
     width: 100%;
-}
-
-h5 {
-    line-height: 1.5;
 }
